--- a/Basic WebMap of US Population.ipynb
+++ b/Basic WebMap of US Population.ipynb
@@ -158,12 +158,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mark(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(pop)):\n",
-    "    fg.add_child(fo.Marker(location=[lat[i],long[i]],popup=name[i]))"
+    "    fg.add_child(fo.Marker(location=[lat[i],long[i]],popup=name[i],icon=fo.Icon(color=mark(popu[i]))))"
    ]
   },
   {
